--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,17 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+
 
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --main-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --main_title-color: #DB00FF;
+  --title_decor-color: #000028;
+  --secondary_title-color: #FF0070;
+  --decor-color: #FF0070;
+  background-image: url(../images/cover-image-dark.png);
+  background-color: #000028;
 }
+
