--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,30 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --main-color: #353430;
+  --accent-color: #FF8DCB;
+  --main_title-color: #FFC2E6;
+  --secondary_title-color: #353430;
+  --decor-color: transparent;
+  background-image: url(../images/cover-image-light.png);
+  background-color: #FFF1F7;
+}
+
+@media (prefers-color-scheme: light) {
+
+  :root {
+    --main-color: #353430;
+    --accent-color: #FF8DCB;
+    --main_title-color: #FFC2E6;
+    --secondary_title-color: #353430;
+    --decor-color: transparent;
+}
+
+  .page {
+    background-image: url(../images/cover-image-light.png);
+    background-color: #FFF1F7;
+
+    
+}
+
 }
