--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,306 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  font-family: "IBM Plex mono";
+  font-size: 18px;
+  line-height: 1.3;
+  padding-inline-start: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+  padding-inline-end: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: url(../images/cover-image-dark.png);
+  background-color: #000028;
+}
+
+.header {
+  display: grid;
+  position: relative;
+  grid-template-rows: 1fr auto 1fr ;
+  height: 100vb;
+  padding-block: clamp(10px, 0.023rem + 2.551vi, 20px);
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-block-start: 1px solid var(--secondary_title-color);
+  border-inline-end: 1px solid var(--secondary_title-color);
+  inset: clamp(10px, 0.023rem + 2.551vi, 20px) 0 auto auto;
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-block-end: 1px solid var(--secondary_title-color);
+  border-inline-start: 1px solid var(--secondary_title-color);
+  inset: auto auto clamp(10px, 0.023rem + 2.551vi, 20px) 0;
+}
+
+
+.header__theme-menu {
+  justify-self: flex-end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+@media(width > 900px) {
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: flex-start;
+  }
+  
+}
+
+.header__theme-menu::before {
+  content: "rec";
+  position: absolute;
+  inset: clamp(10px, 0.023rem + 2.551vi, 20px) 28px auto auto;
+  font-size: 18px;
+  line-height: 1.39;
+  color: var(--decor-color);
+  text-transform: uppercase;
+  
+}
+
+.header__theme-menu::after {
+  content: "";
+  position: absolute;
+  background-color: var(--decor-color);
+  block-size: 9px;
+  inline-size: 9px;
+  border-radius: 50%;
+  inset: clamp(17px, 0.303rem + 3.077vi, 27px) 9px auto auto;
+  box-shadow: 0 0 4px 2px var(--decor-color);
+}
+
+.header__theme-menu-button {
+  inline-size: 70px;
+  block-size: 26px;
+  color: var(--secondary_title-color);
+  background-color: transparent;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+  line-height: 1;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--secondary_title-color);
+}
+
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border: 1px solid var(--secondary_title-color);
+}
+
+.main__title {
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 0.825;
+  color: var(--main_title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+
+@media(width > 768px) {
+
+  .main__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+.title-decor {
+  font-weight: 700;
+  font-size: 18px;
+  color: var(--title_decor-color);
+  background-color: var(--accent-color);
+  align-self: center
+}
+
+@media(width > 500px) {
+
+  .header .title-decor {
+    max-width: 49.9%;
+    justify-self: flex-end;
+  }
+
+  .main__title {
+    margin-inline-start: -20px;
+  }
+}
+
+.main {
+  padding-block: clamp(2.5rem, 1.3073rem + 5.0891vw, 3.75rem);
+}
+
+.section {
+  display: grid;
+  gap: 20px;
+}
+
+@media(500px < width < 900px) {
+
+  .section {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section_stereo .article {
+    grid-column: 2 / 3;
+  }
+
+  .section_mono .article {
+    grid-column: 1 / 3;
+  }
+}
+
+@media(width >= 900px) {
+
+  .section {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section_stereo {
+    gap: 20px 10px;
+  }
+
+  .section_stereo .article {
+    grid-column: 2 / 3;
+  }
+
+  .section_mono {
+    grid-template-columns: repeat(3, 1fr);
+    
+  }
+
+  .section_mono .article {
+    grid-row: 2 / 3;
+}
+}
+
+.section:not(:last-of-type) {
+  margin-bottom:clamp(3.125rem, 1.3359rem + 7.6336vw, 5rem);
+}
+
+
+.section__title {
+  color: var(--secondary_title-color);
+  font-size: inherit;
+}
+
+.text__title {
+ margin-block-end: 10px;
+}
+
+.text__title-gap {
+  margin-block-end: 20px;
+}
+
+.main__text {
+  color: var(--main-color);
+}
+
+.main__text-link {
+  text-decoration: none;
+  text-shadow: 2px 2px var(--accent-color);
+}
+
+.main__text-link:hover {
+  border-block-end: 1px solid var(--main-color);
+}
+
+.main__text-link:focus {
+  outline: none;
+}
+
+.main__text-link:focus-visible {
+  outline: 1px solid var(--main-color);
+}
+
+.paragraph__title {
+  color: var(--title_decor-color);
+  font-weight: 400;
+  background-color: var(--accent-color);
+}
+
+.section__gallery {
+  display: grid;
+  gap: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+}
+
+.section__gallery-picture {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (width > 500px) {
+
+  .section__gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section__gallery-title {
+    grid-column: span 3;
+  }
+
+  .section__gallery-picture:nth-of-type(1) {
+    grid-column: span 2;
+  }
+
+  .section__gallery-picture:nth-of-type(2) {
+    grid-row: span 2;
+  }
+
+  .section__gallery-picture:nth-of-type(3) {
+    grid-row: span 2;
+  }
+
+  .section__gallery-picture:nth-of-type(5) {
+    grid-column: span 2;
+  }
+}
+
+.footer {
+  position: relative;
+  height: 100vb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__title {
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 0.825;
+  color: var(--main_title-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+
+@media(width > 768px) {
+
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
