--- a/styles/style.css
+++ b/styles/style.css
@@ -166,11 +166,11 @@
     grid-template-columns: 1fr 2fr;
   }
 
-  .section_stereo .article {
+  .section__stereo .article {
     grid-column: 2 / 3;
   }
 
-  .section_mono .article {
+  .section__mono .article {
     grid-column: 1 / 3;
   }
 }
@@ -181,20 +181,20 @@
     grid-template-columns: 1fr 2fr;
   }
 
-  .section_stereo {
+  .section__stereo {
     gap: 20px 10px;
   }
 
-  .section_stereo .article {
+  .section__stereo .article {
     grid-column: 2 / 3;
   }
 
-  .section_mono {
+  .section__mono {
     grid-template-columns: repeat(3, 1fr);
     
   }
 
-  .section_mono .article {
+  .section__mono .article {
     grid-row: 2 / 3;
 }
 }
