--- a/styles/light.css
+++ b/styles/light.css
@@ -12,8 +12,10 @@
   --main-color: #353430;
   --accent-color: #FF8DCB;
   --main_title-color: #FFC2E6;
+  --title_decor-color: #353430;
   --secondary_title-color: #353430;
   --decor-color: transparent;
+  --button_hover-color: rgb(50 49 45 / 0.4);
   background-image: url(../images/cover-image-light.png);
   background-color: #FFF1F7;
 }
@@ -25,6 +27,7 @@
     --accent-color: #FF8DCB;
     --main_title-color: #FFC2E6;
     --secondary_title-color: #353430;
+    --button_hover-color: rgb(50 49 45 / 0.4);
     --decor-color: transparent;
 }
 
