--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,4 +10,5 @@
   --title_decor-color: #000028;
   --secondary_title-color: #FF0070;
   --decor-color: #FF0070;
+  --button_hover-color: rgb(255 0 112 / 0.4);
 }
