--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  font-family: "IBM Plex mono";
+  font-family: "IBM Plex mono", monospace, sans-serif;
   font-size: 18px;
   line-height: 1.3;
   padding-inline-start: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
@@ -19,6 +19,7 @@
   position: relative;
   grid-template-rows: 1fr auto 1fr ;
   height: 100vb;
+  min-height: 668px;
   padding-block: clamp(10px, 0.023rem + 2.551vi, 20px);
 }
 
@@ -109,6 +110,9 @@
   border-block-end: 1px solid var(--secondary_title-color);
 }
 
+.header__theme-menu-button:hover {
+  border: 1px solid var(--button_hover-color);
+}
 
 .header__theme-menu-button_active {
   pointer-events: none;
@@ -173,6 +177,10 @@
   .section__mono .article {
     grid-column: 1 / 3;
   }
+
+  .section__stereo .section__title {
+    grid-row: span 2;
+  }
 }
 
 @media(width >= 900px) {
@@ -189,20 +197,23 @@
     grid-column: 2 / 3;
   }
 
-  .section__mono {
-    grid-template-columns: repeat(3, 1fr);
-    
+  .section__stereo .section__title {
+    grid-row: span 2;
   }
 
-  .section__mono .article {
-    grid-row: 2 / 3;
-}
+  .section__mono {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section__mono .section__title {
+    grid-column: span 3;
+    max-width: calc((100% - 40px) / 3);
+  }
 }
 
 .section:not(:last-of-type) {
   margin-bottom:clamp(3.125rem, 1.3359rem + 7.6336vw, 5rem);
 }
-
 
 .section__title {
   color: var(--secondary_title-color);
@@ -213,12 +224,12 @@
  margin-block-end: 10px;
 }
 
-.text__title-gap {
-  margin-block-end: 20px;
-}
-
 .main__text {
   color: var(--main-color);
+}
+
+.article > .main__text:not(:last-of-type) {
+  margin-block-end: 10px;
 }
 
 .main__text-link {
@@ -285,6 +296,7 @@
 .footer {
   position: relative;
   height: 100vb;
+  min-height: 668px;
   display: flex;
   justify-content: center;
   align-items: center;
