исправление ошибки в авто

--- a/styles/light.css
+++ b/styles/light.css
@@ -26,6 +26,7 @@
     --main-color: #353430;
     --accent-color: #FF8DCB;
     --main_title-color: #FFC2E6;
+    --title_decor-color: #353430;
     --secondary_title-color: #353430;
     --button_hover-color: rgb(50 49 45 / 0.4);
     --decor-color: transparent;
